unpackaged/main/default/objects/Case/fields/Days_from_case_creation_to_escalation__c.field-meta.xml
<CustomField>
    <fullName>Days_from_case_creation_to_escalation__c</fullName>
    <description>A field that calculates time from case creation to escalation in CS Escalation Record type.</description>
    <formula>CreatedDate - Parent.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from case creation to escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>