unpackaged/main/default/objects/Case/fields/Days_since_last_email_sent_2__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_email_sent_2__c</fullName>
    <formula>TODAY() - Days_since_last_email_sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last email sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>