unpackaged/main/default/objects/Case/fields/Days_since_last_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_email_sent__c</fullName>
    <formula>DATEVALUE( Last_Email_Sent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date last email sent</label>
    <type>Date</type>
</CustomField>