unpackaged/main/default/objects/Case/fields/Days_since_last_Jira_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Jira_Update__c</fullName>
    <formula>TODAY() - DATEVALUE(JIRA_Last_Updated__c)</formula>
    <label>Days since last Jira Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>