unpackaged/main/default/objects/Case/fields/Days_to_have_a_final_onwer__c.field-meta.xml
<CustomField>
    <fullName>Days_to_have_a_final_onwer__c</fullName>
    <description>Days between last ownership changed and the creation date of the case</description>
    <formula>Date_Time_Last_Ownership_Change__c -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between last ownership changed and the creation date of the case</inlineHelpText>
    <label>Days to have a final owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>