unpackaged/main/default/objects/Case/fields/Downtime_minutes__c.field-meta.xml
<CustomField>
    <fullName>Downtime_minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The time in minutes that the live stream or 24/7 channel was down due to the issue on the support case</description>
    <inlineHelpText>The time in minutes that the live stream or 24/7 channel was down due to the issue on the support case</inlineHelpText>
    <label>Downtime minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>