unpackaged/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>If you have an upcoming event or an expected delivery date for your request, please enter the date in here.
Data Owner</description>
    <inlineHelpText>If you have an upcoming event or an expected delivery date for your request, please enter the date in here.
Data Owner</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>