unpackaged/main/default/objects/Case/fields/Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced__c</fullName>
    <formula>IF( ISBLANK(Contact.EmailBouncedDate) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>