unpackaged/main/default/objects/Case/fields/Email_Contact_domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact_domain__c</fullName>
    <formula>SUBSTITUTE(Contact.Email, LEFT(Contact.Email, FIND(&quot;@&quot;, Contact.Email)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Contact domain</label>
    <type>Text</type>
</CustomField>