unpackaged/main/default/objects/Case/fields/Email_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Send__c</fullName>
    <description>For internal use by the CaseTrigger only. This field should not appear on any page layouts</description>
    <label>Email to Send</label>
    <length>255</length>
    <type>Text</type>
</CustomField>