unpackaged/main/default/objects/Case/fields/Escalated_to_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Engineering__c</fullName>
    <label>Escalated to Engineering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Integration</fullName>
            </value>
            <value>
                <fullName>Alive</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>BGS</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>CDN OPS</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Ingestion</fullName>
            </value>
            <value>
                <fullName>Interactivity</fullName>
            </value>
            <value>
                <fullName>Players</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Zencoder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>