unpackaged/main/default/objects/Case/fields/Escalation_date_time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_date_time__c</fullName>
    <description>It contains the date and time for the escalation</description>
    <label>Escalation date time</label>
    <type>DateTime</type>
</CustomField>