unpackaged/main/default/objects/Case/fields/Escalation_Follow_up_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Follow_up_Completed_Date__c</fullName>
    <description>Timestamp when the Completed Checkbox is marked to true</description>
    <label>Coaching Completed Date</label>
    <type>DateTime</type>
</CustomField>