unpackaged/main/default/objects/Case/fields/Escalation_Follow_up_Owner__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Follow_up_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager who will be closing the loop with the case owner on how to avoid escalations</description>
    <label>Coaching Owner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.CS_Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>