unpackaged/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Escalating_As__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Per leadership instruction</fullName>
            </value>
            <value>
                <fullName>Per process</fullName>
            </value>
            <value>
                <fullName>Time spent</fullName>
            </value>
            <value>
                <fullName>Lack of knowledge</fullName>
            </value>
            <value>
                <fullName>Lack of documentation</fullName>
            </value>
            <value>
                <fullName>Per Process T1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>