unpackaged/main/default/objects/Case/fields/EST_24_Hour_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>EST_24_Hour_Time_Opened__c</fullName>
    <formula>VALUE(MID(TEXT( CreatedDate +  EST_Modifier__c  ),12,2)) /*hours*/ + 
(VALUE(MID(TEXT(CreatedDate + EST_Modifier__c ),15,2))/60) /*minutes*/ + 
(VALUE(MID(TEXT(CreatedDate + EST_Modifier__c ),18,2))/3600) /*seconds*/ 
/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EST 24 Hour Time Opened</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>