unpackaged/main/default/objects/Case/fields/EST_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>EST_Day_Of_Week__c</fullName>
    <formula>CASE( 
FLOOR( 
MOD( 
( CreatedDate  +  EST_Modifier__c  - $System.OriginDateTime),7 
) 
), 
0,&quot;Monday&quot;, 
1,&quot;Tuesday&quot;, 
2,&quot;Wednesday&quot;, 
3,&quot;Thursday&quot;, 
4,&quot;Friday&quot;, 
5,&quot;Saturday&quot;, 
6,&quot;Sunday&quot;, 
&quot;Error&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EST Day Of Week</label>
    <type>Text</type>
</CustomField>