unpackaged/main/default/objects/Case/fields/First_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Response__c</fullName>
    <description>It stores the First response date and time and triggers the auto-complete of the milestone.</description>
    <label>First Response</label>
    <type>DateTime</type>
</CustomField>