unpackaged/main/default/objects/Case/fields/FIX_Closed_Date_c__c.field-meta.xml
<CustomField>
    <fullName>FIX_Closed_Date_c__c</fullName>
    <formula>IF(
    AND(
        !ISNULL(Real_Closed_Date__c),
        Real_Closed_Date__c != ClosedDate
    ),true,false
)</formula>
    <label>FIX_Closed_Date__c</label>
    <type>Checkbox</type>
</CustomField>