unpackaged/main/default/objects/Case/fields/FIX_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FIX_CreatedDate__c</fullName>
    <formula>IF(
    AND(!ISNULL(Real_Created_Date__c), Real_Created_Date__c != CreatedDate), true, false
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FIX CreatedDate</label>
    <type>Checkbox</type>
</CustomField>