unpackaged/main/default/objects/Case/fields/Follow_up_request_user__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_request_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow-up request user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseforFollowUp</relationshipName>
    <type>Lookup</type>
</CustomField>