unpackaged/main/default/objects/Case/fields/Follow_up_requested_by__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_requested_by__c</fullName>
    <label>Coaching requested by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>