unpackaged/main/default/objects/Case/fields/GMT_of_the_week__c.field-meta.xml
<CustomField>
    <fullName>GMT_of_the_week__c</fullName>
    <formula>CASE(
MOD( DATEVALUE(  CreatedDate   ) - DATE(1900, 1, 7), 7),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3,&quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
6, &quot;Saturday&quot;,
&quot;Still open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMT of the week</label>
    <type>Text</type>
</CustomField>