unpackaged/main/default/objects/Case/fields/GMT_Offset_Value__c.field-meta.xml
<CustomField>
    <fullName>GMT_Offset_Value__c</fullName>
    <formula>CASE(
    Account.Owner.Division,
    &quot;Americas&quot;,-(4/24),
    &quot;EMEA&quot;,(1/24),
    &quot;APAC&quot;,(8/24),
    &quot;Japan&quot;,(9/24),0
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMT Offset Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>