unpackaged/main/default/objects/Case/fields/Handoff_Count__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Count__c</fullName>
    <label>Handoff Count</label>
    <summaryForeignKey>Case_Handoff__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>