unpackaged/main/default/objects/Case/fields/Has_KNOW_jira__c.field-meta.xml
<CustomField>
    <fullName>Has_KNOW_jira__c</fullName>
    <description>True if Jira attached and it&#39;s a KNOW jira</description>
    <formula>AND(NOT(ISBLANK( JIRA_Key__c )),CONTAINS(JIRA_Key__c, &quot;KNOW&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has KNOW jira</label>
    <type>Checkbox</type>
</CustomField>