unpackaged/main/default/objects/Case/fields/HQ_State__c.field-meta.xml
<CustomField>
    <fullName>HQ_State__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ State</label>
    <type>Text</type>
</CustomField>