unpackaged/main/default/objects/Case/fields/Incoming_email_count__c.field-meta.xml
<CustomField>
    <fullName>Incoming_email_count__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>It counts all the incoming messages (email+comments)</description>
    <label>Incoming messages count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>