unpackaged/main/default/objects/Case/fields/Informed_Customer__c.field-meta.xml
<CustomField>
    <fullName>Informed_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informed Customer</label>
    <type>Checkbox</type>
</CustomField>