unpackaged/main/default/objects/Case/fields/Is_User_Case_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Case_Contact__c</fullName>
    <formula>IF(AND(NOT(ISBLANK($User.ContactId)),$User.ContactId = ContactId), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Case Contact</label>
    <type>Checkbox</type>
</CustomField>