unpackaged/main/default/objects/Case/fields/JIRA_Age__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Age__c</fullName>
    <formula>IF( Has_JIRA__c = TRUE, 
IF(OR(JIRA_Status__c = &quot;Closed&quot;,JIRA_Status__c = &quot;Resolved&quot;,JIRA_Status__c = &quot;Done&quot;),

DATETIMEVALUE(JIRA__c)-DATETIMEVALUE(JIRA_Created_Date_DATE__c)

,
NOW()-DATETIMEVALUE(JIRA_Created_Date_DATE__c))


,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JIRA Age (Days)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>