unpackaged/main/default/objects/Case/fields/JIRA_Category__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Category__c</fullName>
    <label>JIRA Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>