unpackaged/main/default/objects/Case/fields/Jira_Component__c.field-meta.xml
<CustomField>
    <fullName>Jira_Component__c</fullName>
    <description>Used for the JIRA integration</description>
    <label>Jira Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>