unpackaged/main/default/objects/Case/fields/JIRA_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Created_Date__c</fullName>
    <label>JIRA Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>