unpackaged/main/default/objects/Case/fields/JIRA_Date_of_First_Response__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Date_of_First_Response__c</fullName>
    <label>JIRA Date of First Response</label>
    <type>DateTime</type>
</CustomField>