unpackaged/main/default/objects/Case/fields/JIRA_Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Date_Resolved__c</fullName>
    <label>JIRA Date Resolved</label>
    <type>Date</type>
</CustomField>