unpackaged/main/default/objects/Case/fields/JIRA_Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Functional_Group__c</fullName>
    <label>JIRA Functional Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>