unpackaged/main/default/objects/Case/fields/JIRA_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Type__c</fullName>
    <label>JIRA Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>