unpackaged/main/default/objects/Case/fields/JIRA_Key__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Key__c</fullName>
    <description>- Extraprise 12/16/05</description>
    <label>JIRA Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>