unpackaged/main/default/objects/Case/fields/JIRA_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Last_Updated__c</fullName>
    <label>JIRA Last Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>