unpackaged/main/default/objects/Case/fields/JIRA_Reporter__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Reporter__c</fullName>
    <label>JIRA Reporter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>