unpackaged/main/default/objects/Case/fields/JIRA_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Resolution_Type__c</fullName>
    <label>JIRA Resolution Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>