unpackaged/main/default/objects/Case/fields/JIRA_SIR_Required__c.field-meta.xml
<CustomField>
    <fullName>JIRA_SIR_Required__c</fullName>
    <label>JIRA SIR Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>