unpackaged/main/default/objects/Case/fields/JIRA_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Time_Spent__c</fullName>
    <description>CSENG time spent field synced from Jira</description>
    <label>JIRA Time Spent</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>