unpackaged/main/default/objects/Case/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>This Code is based on Language field.  It is to be used in trigger to determine email template version.</description>
    <formula>CASE( Language__c ,
&#39;English&#39;, &#39;EN&#39;,
&#39;French&#39;, &#39;FR&#39;,
&#39;German&#39;, &#39;GE&#39;,
&#39;Italian&#39;, &#39;IT&#39;,
&#39;Spanish&#39;, &#39;SP&#39;,
&#39;Korean&#39;, &#39;KO&#39;,
&#39;Japanese&#39;, &#39;JA&#39;,
&#39;Catalan&#39;, &#39;CA&#39;,
&#39;&#39;
)</formula>
    <label>Language Code</label>
    <type>Text</type>
</CustomField>