unpackaged/main/default/objects/Case/fields/Last_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Sent__c</fullName>
    <label>Last Email Sent Date Time</label>
    <type>DateTime</type>
</CustomField>