unpackaged/main/default/objects/Case/fields/Last_Response_Additional_To__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Additional_To__c</fullName>
    <description>Hidden field that stores the &quot;additional to&quot; email addresses from the last email sent from the case.  Used for 2x4/2x8 rule apex triggers.</description>
    <label>Last Response Additional To</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>