unpackaged/main/default/objects/Case/fields/Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Status__c</fullName>
    <inlineHelpText>What was the last open Status for this Case before the Case was closed?</inlineHelpText>
    <label>Last Open Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>