unpackaged/main/default/objects/Case/fields/LastName_JP__c.field-meta.xml
<CustomField>
    <fullName>LastName_JP__c</fullName>
    <formula>Contact.LastName_JP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName JP</label>
    <type>Text</type>
</CustomField>